# aoc23

./: .gitignore  CMakeLists.txt  conanfile.txt
scripts/: compile.sh  configure.sh
src/day1/: CMakeLists.txt  main.cpp
src/day2/: CMakeLists.txt  main.cpp
utils/: ArgParse.cpp  CMakeLists.txt  StringUtils.cpp
